tests/snapshots/cli__print_view_emits_viewmodel_json.snap
---
source: tests/cli.rs
expression: "export(&[\"--print-view\"])"
---
{
  "screen": "tree",
  "root": "[FIXTURE]",
  "rows": [
    {
      "depth": 0,
      "label": "[FIXTURE]",
      "is_group": true
    },
    {
      "depth": 1,
      "label": "🔧 Metadata",
      "is_group": true
    },
    {
      "depth": 1,
      "label": "lm_head.weight",
      "is_group": false
    },
    {
      "depth": 1,
      "label": "model",
      "is_group": true
    },
    {
      "depth": 2,
      "label": "model.embed_tokens.weight",
      "is_group": false
    },
    {
      "depth": 2,
      "label": "layers.0",
      "is_group": true
    },
    {
      "depth": 2,
      "label": "model.norm.weight",
      "is_group": false
    },
    {
      "depth": 2,
      "label": "model.scale.u8",
      "is_group": false
    }
  ],
  "selected": 0,
  "status": "[FIXTURE]",
  "search": null
}
